--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,57 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-javadoc-plugin</artifactId>
+		    <version>3.2.0</version>
+		    <scope>test</scope>
+	</dependency>
     </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    
+  <!--   <build>
+    	<plugins>
+    		  <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-javadoc-plugin</artifactId>
+		        <version>2.8</version>
+		        <configuration> 
+		            <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
+		            <reportOutputDirectory>${project.reporting.outputDirectory}/javadoc</reportOutputDirectory>
+		        </configuration>
+		        <executions>
+		            <execution>
+		                <id>attach-javadocs</id>
+		                <phase>install</phase>
+		                <goals>
+		                    <goal>aggregate</goal>
+		                </goals>
+		            </execution>
+		        </executions>
+		    </plugin>
+    	</plugins>
+  	</build> -->
+  	<build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+			<executions>
+				<execution>
+					<id>attach-javadocs</id>
+					<goals>
+						<goal>jar</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+</build>
+    
 </project>
