--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,3 +21,5 @@ jobs:
         java-version: 11
     - name: Test with Maven
       run: mvn -B test --file pom.xml
+    - name: Javadoc
+      run: mvn javadoc:javadoc
